<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="movieDB_api_key" translatable="false">YOUR_API_KEY</string>
    <string name="this_imageview_displays_the_posters_of_the_movie_in_the_homeactivity">This imageview displays the posters of the movie in the HomeActivity</string>

    <string name="bottom_navigation_title_popular">Poplular</string>
    <string name="bottom_navigation_title_top_rated">Top Rated</string>
    <string name="bottom_navigation_title_upcoming">Up Coming</string>
    <string name="bottom_navigation_title_favorite">Favorite</string>
    <string name="bottom_navigation_title_settings">Settings</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="backdrop_image">BackDrop Image</string>
    <string name="icon">icon</string>
    <string name="no_data_available">No Data Available.</string>
    <string name="no_tagline_available">No Tag Line Available.</string>
    <string name="casts">Casts</string>
    <string name="description">Description</string>
    <string name="dots">................</string>
    <string name="dots_lenghty">................................................................................................</string>
    <string name="shared_element_transition">sharedElementTransition</string>
    <string name="connection_failed">Connection Failed</string>

</resources>
